objects/vlocity_ins__FeeScheduleEntry__c.object
<CustomObject>
    <description>Represents the comprehensive list of fee maximums used to reimburse a physician,dentist, or other providers on a fee-for-service-at-a-location basis. For example, a Healthcare CMS develops and publishes fee schedules for physicians, ambulance services, clinical laboratory services, and durable medical equipment, prosthetics, orthotics, and supplies. Master-detail child object of the Fee Schedule.</description>
    <fields>
        <fullName>vlocity_ins__CodeShortDescription__c</fullName>
        <formula>vlocity_ins__VlocityCodeId__r.vlocity_ins__ShortDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Short Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FeeAmount__c</fullName>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FeeScheduleId__c</fullName>
        <label>Fee Schedule</label>
        <referenceTo>vlocity_ins__FeeSchedule__c</referenceTo>
        <relationshipLabel>Fee Schedule Entries</relationshipLabel>
        <relationshipName>FeeScheduleEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JurisdictionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Jurisdiction</label>
        <referenceTo>vlocity_ins__Jurisdiction__c</referenceTo>
        <relationshipLabel>Fee Schedule Entries</relationshipLabel>
        <relationshipName>FeeScheduleEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Locality__c</fullName>
        <label>Locality</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VlocityCodeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurance Code</label>
        <referenceTo>vlocity_ins__VlocityCode__c</referenceTo>
        <relationshipLabel>Fee Schedule Entries</relationshipLabel>
        <relationshipName>FeeScheduleEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Fee Schedule Entry</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee Schedule Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>